[metadata]
author = Stefan Hagen
author_email = stefan@hagen.link
description = Experimental CSAF validator for envelope and body profiles.
home_page = https://github.com/sthagen/csaf-lint

keywords =
    baseline
    body
    core
    csaf
    cvrf
    development
    envelope
    extension
    profile
    validation

long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Stefan Hagen
maintainer_email = stefan@hagen.link
name = csaf-lint

project_urls =
    Bug Tracker = https://github.com/sthagen/csaf-lint/issues
    Documentation = https://sthagen.github.io/csaf-lint
    Source Code = https://github.com/sthagen/csaf-lint

url = https://github.com/sthagen/csaf-lint
version = 2022.7.17


classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.8

install_requires =
    attrs >= 22.1.0
    jsonschema >= 4.8.0
    lxml >= 4.9.1
    xmlschema >= 2.0.1

packages = find:

[options.packages.find]
where = csaf_lint
exclude =
    test*

[options.entry_points]
console_scripts =
    csaf-lint=csaf_lint.cli:app

[options.extras_require]
dev =
    black
    coverage
    flake8
    mypy
    pytest
    pytest-cov
    pytest-flake8

[bdist_wheel]
universal = True


[tool:pytest]
testpaths = test
filterwarnings = error

[flake8]
max-line-length = 120
max-complexity = 42
inline-quotes = '
multiline-quotes = """
ignore = E203, W503
[coverage:run]
branch = True
[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if TYPE_CHECKING:
    @overload
omit =
    # __main__.py is trivial and hard to test properly
    */__main__.py
[isort]
line_length=120
known_first_party=csaf-lint
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
[mypy]
strict = True
implicit_reexport = True
